# ChangeLog for media-gfx/iscan-plugin-gt-f500
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/iscan-plugin-gt-f500/ChangeLog,v 1.2 2011/04/21 14:28:16 flameeyes Exp $

  21 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  iscan-plugin-gt-f500-1.0.0.1.ebuild:
  Improve ebuild, simplify command handling, only run first time
  installing/removing, avoid nested ifs.

*iscan-plugin-gt-f500-1.0.0.1 (20 Apr 2011)

  20 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +iscan-plugin-gt-f500-1.0.0.1.ebuild, +metadata.xml:
  Initial import of the iscan plugin/firmware for EPSON Perfection 2480/2580.
