@@ -1,16 +1,16 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/iscan-plugin-gt-f500/Attic/iscan-plugin-gt-f500-1.0.0.1.ebuild,v 1.2 2011/04/21 14:28:16 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/iscan-plugin-gt-f500/Attic/iscan-plugin-gt-f500-1.0.0.1.ebuild,v 1.3 2011/04/22 15:12:04 flameeyes Exp $
 
 EAPI="4"
 
 inherit rpm versionator
 
-MY_P="${PN}-$(get_version_component_range 1-3)"
+MY_P="${PN}-$(replace_version_separator 3 -)"
 
-DESCRIPTION="Epson Perfection V2480/2580 PHOTO scanner plugin for SANE 'epkowa' backend."
+DESCRIPTION="Epson Perfection 2480/2580 PHOTO scanner plugin for SANE 'epkowa' backend."
 HOMEPAGE="http://www.avasys.jp/english/linux_e/dl_scan.html"
-SRC_URI="http://lx1.avasys.jp/iscan/v1180/${PN}-$(replace_version_separator 3 -).i386.rpm"
+SRC_URI="http://lx1.avasys.jp/iscan/v1180/${MY_P}.i386.rpm"
 
 LICENSE="EPSON EAPL"
 SLOT="0"
@@ -31,16 +31,18 @@ src_install() {
 	insinto /usr/share/iscan
 	doins "${WORKDIR}/usr/share/iscan/"*
 
-	dodoc "usr/share/doc/${MY_P}/"*
+	dodoc usr/share/doc/*/*
 
 	use minimal && return
 	# install scanner plugins
-	exeinto "/usr/$(get_libdir)/iscan"
+	exeinto /opt/iscan/esci
 	doexe "${WORKDIR}/usr/$(get_libdir)/iscan/"*
 }
 
 pkg_setup() {
-	basecmd="iscan-registry --COMMAND interpreter usb 0x04b8 0x0121 '/usr/$(get_libdir)/iscan/libesint41.so.2 /usr/share/iscan/esfw41.bin'"
+	basecmds=(
+		"iscan-registry --COMMAND interpreter usb 0x04b8 0x0121 '/opt/iscan/esci/libesint41.so.2 /usr/share/iscan/esfw41.bin'"
+	)
 }
 
 pkg_postinst() {
@@ -53,11 +55,15 @@ pkg_postinst() {
 
 	# Needed for scanner to work properly.
 	if [[ ${ROOT} == "/" ]]; then
-		eval ${basecmd/COMMAND/add}
+		for basecmd in "${basecmds[@]}"; do
+			eval ${basecmd/COMMAND/add}
+		done
 	else
 		ewarn "Unable to register the plugin and firmware when installing outside of /."
 		ewarn "execute the following command yourself:"
-		ewarn "${basecmd/COMMAND/add}"
+		for basecmd in "${basecmds[@]}"; do
+			ewarn "${basecmd/COMMAND/add}"
+		done
 	fi
 }
 
@@ -66,10 +72,14 @@ pkg_prerm() {
 	[[ -n ${REPLACED_BY_VERSION} ]] && return
 
 	if [[ ${ROOT} == "/" ]]; then
-		eval ${basecmd/COMMAND/remove}
+		for basecmd in "${basecmds[@]}"; do
+			eval ${basecmd/COMMAND/remove}
+		done
 	else
 		ewarn "Unable to de-register the plugin and firmware when installing outside of /."
 		ewarn "execute the following command yourself:"
-		ewarn "${basecmd/COMMAND/remove}"
+		for basecmd in "${basecmds[@]}"; do
+			ewarn "${basecmd/COMMAND/remove}"
+		done
 	fi
 }
