@@ -15,8 +15,8 @@
 
     Supports the following models:
 
-    EPSON Perfection 2480 PHOTO
-    EPSON Perfection 2580 PHOTO
+    EPSON Perfection 2480 PHOTO / GT-F500
+    EPSON Perfection 2580 PHOTO / GT-F550
   </longdescription>
 
   <use>
