@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/iscan-plugin-gt-f500
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/iscan-plugin-gt-f500/ChangeLog,v 1.2 2011/04/21 14:28:16 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/iscan-plugin-gt-f500/ChangeLog,v 1.3 2011/04/22 15:12:04 flameeyes Exp $
+
+  22 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org>
+  iscan-plugin-gt-f500-1.0.0.1.ebuild, metadata.xml:
+  Use a generalized syntax to handle multiple base commands; install in /opt;
+  fix description; simplify doc install.
 
   21 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org>
   iscan-plugin-gt-f500-1.0.0.1.ebuild:
